--- a/src/Assets/styles.global.scss
+++ b/src/Assets/styles.global.scss
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
+@import "variables";
 
 * {
     font-family: 'Nunito', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
