--- a/src/Assets/_variables.scss
+++ b/src/Assets/_variables.scss
@@ -1,5 +1,8 @@
 $main: #21BF73;
 $light: #B0EACD;
 $dark: #2E374F;
+$light_dark: #758283;
 $contrastText: #F4F4F6;
-$bg:aliceblue
+$bg:aliceblue;
+
+$bg_shadow:rgba(0, 0, 0, 0.16) 0px 1px 4px;
