Configure data table properly

--- a/src/Assets/_variables.scss
+++ b/src/Assets/_variables.scss
@@ -3,6 +3,6 @@ $light: #B0EACD;
 $dark: #2E374F;
 $light_dark: #758283;
 $contrastText: #F4F4F6;
-$bg:aliceblue;
+$bg:#f0f8ff;
 
 $bg_shadow:rgba(0, 0, 0, 0.16) 0px 1px 4px;
