--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,9 +1,9 @@
 @import "../../Assets//variables";
-.home{
-    display: flex;
-    .homeContainer{
-        background-color: $bg;
-        flex: 5;
-    }
+// .home{
+//     display: flex;
+//     .homeContainer{
+//         background-color: $bg;
+//         flex: 5;
+//     }
 
-}
+// }
